--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,6 +2,7 @@
 <resources>
     <color name="colorPrimary">#0B6156</color>
     <color name="colorPrimaryDark">#0A5048</color>
+    <color name="colorPrimaryDarker">#023933</color>
     <color name="colorAccent">#000000</color>
     <color name="textColorPrimary">#FFFFFF</color>
 </resources>
