--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,6 +3,7 @@
     <color name="colorPrimary">#0B6156</color>
     <color name="colorPrimaryDark">#0A5048</color>
     <color name="colorPrimaryDarker">#023933</color>
-    <color name="colorAccent">#000000</color>
+    <color name="colorAccent">#3D958A</color>
     <color name="textColorPrimary">#FFFFFF</color>
+
 </resources>
