--- a/app/src/main/res/layout/fragment_contatos.xml
+++ b/app/src/main/res/layout/fragment_contatos.xml
@@ -4,13 +4,11 @@
     android:layout_height="match_parent"
     tools:context="com.example.lieberson.whatsappclone.fragment.ContatosFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <ListView
+        android:id="@+id/lv_contatos"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/txt_contatos"
-        android:textAlignment="center"
-        android:textSize="22sp"
-        android:layout_gravity="center"/>
-
+        android:layout_height="match_parent"
+        android:divider="@color/cinza"
+        android:dividerHeight="1dp"
+        android:layout_gravity="center_horizontal|top"/>
 </FrameLayout>
