--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,5 +5,6 @@
     <color name="colorPrimaryDarker">#023933</color>
     <color name="colorAccent">#3D958A</color>
     <color name="textColorPrimary">#FFFFFF</color>
+    <color name="cinza">#CCCCCC</color>
 
 </resources>
