--- a/app/src/main/res/layout/fragment_contatos.xml
+++ b/app/src/main/res/layout/fragment_contatos.xml
@@ -7,7 +7,7 @@
     <ListView
         android:id="@+id/lv_contatos"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:divider="@color/cinza"
         android:dividerHeight="1dp"
         android:layout_gravity="center_horizontal|top"/>
