Envio de dados para ConversaActivity através da Intent, Criando estrutura de envio e recebimento de mensagens.

--- a/app/src/main/res/layout/activity_conversa.xml
+++ b/app/src/main/res/layout/activity_conversa.xml
@@ -28,6 +28,7 @@
       >
 
     <EditText
+        android:id="@+id/edit_mensagem"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:hint="Mensagem"
@@ -36,6 +37,7 @@
         android:textColorHint="@android:color/black"/>
     
     <ImageButton
+        android:id="@+id/bt_enviar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/ic_action_send"
