--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -23,7 +23,7 @@
         app:srcCompat="@drawable/logo" />
 
     <EditText
-        android:id="@+id/edit_email"
+        android:id="@+id/edit_login_email"
         android:layout_width="289dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
@@ -43,7 +43,7 @@
         app:layout_constraintVertical_bias="0.067" />
 
     <EditText
-        android:id="@+id/edit_senha"
+        android:id="@+id/edit_login_senha"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
@@ -58,7 +58,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.503"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/edit_email"
+        app:layout_constraintTop_toBottomOf="@+id/edit_login_email"
         app:layout_constraintVertical_bias="0.0" />
 
     <Button
@@ -73,7 +73,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/edit_senha"
+        app:layout_constraintTop_toBottomOf="@+id/edit_login_senha"
         app:layout_constraintVertical_bias="0.139"
         android:theme="@style/botaoPadrao"/>
 
